# AutoSDR

./: .env.example  .gitignore  .notes-test-run.md  ARCHITECTURE.md  README.md  autosdr-doc1-product-overview.md  autosdr-doc2-data-architecture.md  autosdr-doc3-ai-messaging.md  autosdr-doc4-onboarding-config.md  example-leads.json  pyproject.toml  skills-lock.json
autosdr/: __init__.py  cli.py  compliance.py  config.py  db.py  enrichment.py  enrichment_extract.py  enrichment_vocab.py  importer.py  killswitch.py  models.py  networking.py  pacing.py  push.py  quota.py  scheduler.py  webhook.py  workspace_settings.py
autosdr/api/: __init__.py  campaigns.py  deps.py  dev.py  errors.py  leads.py  llm.py  llm_calls.py  push.py  scans.py  schemas.py  setup.py  stats.py  status.py  threads.py  webhooks.py  workspace.py
autosdr/connectors/: __init__.py  base.py  file_connector.py  override.py  (+2 more)
docs/: PATTERNS.md  ROADMAP.md  prompt-audit-2026-05-02.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.sw.json  vite.config.ts
scripts/: backfill_llm_call_costs.py  bump_lead_rating.py  dev.sh  dryrun_prompts.py  enrich_leads.py  enrich_leads_httpx.py  fix_google_redirect_urls.py  llm_call_metrics.py  replay_classifier_smoke.py  replay_evaluator.py  replay_outreach_loop.py
tests/: conftest.py  test_api_error_shape.py  test_api_smoke.py  test_api_webhooks.py  test_campaign_api.py  test_campaign_kickoff.py  test_campaign_timeseries.py  test_cli_leads_opt_out.py  test_compliance_opt_out.py  test_connector_factory.py  test_connector_test_endpoint.py  test_dashboard_origin_resolution.py  test_dev_sim_inbound_api.py  test_enrichment.py  test_enrichment_social_website.py  test_file_connector.py  test_followup.py  test_followup_suggestions.py  test_hitl_dismiss.py  test_importer.py  test_importer_field_mapping.py  test_killswitch.py  test_killswitch_inbound_durability.py  test_lead_priority_api.py  test_leads_enrich_api.py  test_leads_import_api.py  test_leads_optout_api.py  test_llm_call_log.py  test_llm_calls_api.py  test_llm_presets_api.py  test_llm_pricing.py  test_networking_probe.py  test_no_await_in_session.py  test_outreach_pipeline.py  test_override_connector.py  test_pacing.py  test_pause_thread_for_hitl_push.py  test_priority_lead.py  test_prompts.py  test_push_payload_privacy.py  (+19 more)
(+122 files in other folders)
