[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autosdr"
version = "0.1.0"
description = "Autonomous SDR for small business owners (POC)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AutoSDR" }]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "litellm>=1.80.8",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "phonenumbers>=8.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "respx>=0.21",
]

[project.scripts]
autosdr = "autosdr.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["autosdr*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
