[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autosdr"
version = "0.1.0"
description = "Autonomous SDR for small business owners (POC)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AutoSDR" }]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "litellm>=1.80.8",
    "httpx>=0.27",
    "crawlee[beautifulsoup]>=0.6",
    "phonenumbers>=8.13",
    "python-multipart>=0.0.26",
    # Web Push transport (ticket 0005). pywebpush wraps the RFC 8030
    # encryption + VAPID signing dance against browser-vendor push
    # gateways. ``cryptography`` is its hard dep but we name it
    # explicitly because we also use it directly for first-boot VAPID
    # keypair generation in :mod:`autosdr.push`.
    "pywebpush>=2.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["autosdr*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
